# django-contact-form

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/locale/: README.md
contact/locale/ru/LC_MESSAGES/: django.mo  django.po
contact/migrations/: 0001_initial.py
contact/templates/contact/: contact_form.html
contact/tests/: test_forms.py  test_views.py
contact/utils/: context_processors.py  decorators.py
